Add source for jdk_1.3.0